[gd_scene load_steps=24 format=2]

[ext_resource path="res://sprites/black_bg.png" type="Texture" id=1]
[ext_resource path="res://scripts/Level.gd" type="Script" id=2]
[ext_resource path="res://scripts/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://sprites/light.png" type="Texture" id=4]
[ext_resource path="res://sprites/player.png" type="Texture" id=5]
[ext_resource path="res://sprites/mask_3.png" type="Texture" id=6]
[ext_resource path="res://sprites/particle.png" type="Texture" id=7]
[ext_resource path="res://audio/light_collected.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/background_music.wav" type="AudioStream" id=9]
[ext_resource path="res://scripts/Light.gd" type="Script" id=10]
[ext_resource path="res://audio/new_level.wav" type="AudioStream" id=11]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="CanvasItemMaterial" id=13]
blend_mode = 1
light_mode = 2

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=6]

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.90335, 0.964473, 0.613397, 1, 0, 0, 0, 1 )

[sub_resource type="CircleShape2D" id=8]
radius = 67.2026

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( -2.05943, -1.41039, -2.05943, -1.35395, -2.02347, -1.35395, -2.02347, -1.40391 )

[sub_resource type="CanvasItemMaterial" id=10]
render_priority = 2

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 48.5305, 51.8467 )

[sub_resource type="Environment" id=12]
background_mode = 4
background_energy = 7.74
background_canvas_max_layer = 1
ambient_light_color = Color( 0.0666667, 0.0588235, 0.0588235, 1 )
ambient_light_energy = 9.67
ambient_light_sky_contribution = 0.0
fog_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
fog_sun_color = Color( 0.301961, 0.0196078, 0.580392, 1 )
tonemap_mode = 2
dof_blur_near_distance = 0.1
dof_blur_near_transition = 0.11
dof_blur_near_amount = 0.09
glow_enabled = true
glow_intensity = 1.56
glow_strength = 0.76
glow_bloom = 0.52
glow_blend_mode = 1
glow_hdr_threshold = 0.5
glow_hdr_scale = 0.33
glow_bicubic_upscale = true

[node name="Level" type="Node2D"]
script = ExtResource( 2 )
padding = 0
darkness_rate = 8

[node name="Light2D" type="Light2D" parent="."]
light_mask = 2
position = Vector2( 587.203, 265.108 )
scale = Vector2( 1.27949, 1981.9 )
texture = SubResource( 2 )
energy = 4.22
range_item_cull_mask = 2
shadow_item_cull_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="TimeElapsedTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
position = Vector2( 3.05176e-05, 3.05176e-05 )
color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 511.146, 295.194 )
scale = Vector2( 448.813, 281.404 )
z_index = -2
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 510.855, 299.22 )
script = ExtResource( 3 )
acceleration = 100
max_speed = 300
friction = 50

[node name="UI" type="MarginContainer" parent="Player"]
margin_left = -421.855
margin_top = -223.22
margin_right = -118.855
margin_bottom = -106.22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Player/UI"]
margin_right = 303.0
margin_bottom = 117.0

[node name="Score" type="Label" parent="Player/UI/Container"]
light_mask = 2
material = SubResource( 13 )
margin_right = 303.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 137.351, -67.2713 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Score: 0"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentLevel" type="Label" parent="Player/UI/Container"]
light_mask = 2
material = SubResource( 13 )
margin_top = 18.0
margin_right = 303.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 137.351, -67.2713 )
custom_colors/font_color = Color( 0.92549, 0.431373, 0.431373, 1 )
text = "Level: 0"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="Label" parent="Player/UI/Container"]
light_mask = 2
material = SubResource( 13 )
margin_top = 36.0
margin_right = 303.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 137.351, -67.2713 )
custom_colors/font_color = Color( 0.423529, 0.67451, 0.462745, 1 )
text = "Energy: 100"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0.291199, -1.02597 )
current = true
smoothing_enabled = true
smoothing_speed = 25.0
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="Player/Camera2D"]
modulate = Color( 0.0705882, 0.0588235, 0.0588235, 1 )
self_modulate = Color( 0.0313726, 0.0235294, 0.0235294, 1 )
light_mask = 2
material = SubResource( 5 )
position = Vector2( -0.291199, 1.02597 )
scale = Vector2( 10.6513, -10.6015 )
texture = ExtResource( 6 )
energy = 2.0
shadow_enabled = true
shadow_color = Color( 0.972549, 0.988235, 0.796078, 1 )
shadow_buffer_size = 512
shadow_gradient_length = 10.0
shadow_filter_smooth = 10.0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Player"]
material = SubResource( 6 )
position = Vector2( 0, -0.530334 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="Tail" type="CPUParticles2D" parent="Player/Sprite"]
amount = 100
lifetime = 0.25
speed_scale = 0.5
randomness = 1.0
lifetime_randomness = 0.25
local_coords = false
texture = ExtResource( 7 )
emission_shape = 1
emission_sphere_radius = 20.55
direction = Vector2( 0, 0 )
spread = 40.48
gravity = Vector2( 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
angular_velocity = 1.0
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
linear_accel = 1.0
linear_accel_random = 1.0
scale_amount = 0.0
scale_amount_random = 0.2
color_ramp = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -0.530334 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 8 )

[node name="LightOrb" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 30, -53 )
scale = Vector2( 0.965251, 0.965251 )
script = ExtResource( 10 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="LightOrb"]
position = Vector2( 539.907, 229.184 )
scale = Vector2( 264.582, 165.892 )
occluder = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="LightOrb"]
material = SubResource( 10 )
use_parent_material = true
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightOrb"]
light_mask = 2
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 11 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[node name="LightCollectedAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 1.87

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0
autoplay = true

[node name="NewLevelAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
autoplay = true
[connection signal="timeout" from="TimeElapsedTimer" to="." method="_on_TimeElapsedTimer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="finished" from="GameMusic" to="." method="_on_GameMusic_finished"]
